Refactoring 4 lab. Nightmare with polygons

--- a/3/work3.ipynb
+++ b/3/work3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "id": "483df79d-c8e7-409c-9dd3-51204ea80367",
    "metadata": {},
    "outputs": [],
@@ -15,36 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
-   "id": "48185d8f-e0fa-480c-9357-fad3277f8040",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "degrees = {'x' : 0, 'y' : 40, 'z' : -90}\n",
-    "a = {k: radians(v) for k,v in degrees.items()}\n",
-    "\n",
-    "height = 1000\n",
-    "width = 1000\n",
-    "\n",
-    "\n",
-    "z_shift = 0.1\n",
-    "extra_z = 0.0001 + z_shift\n",
-    "init_scale = 7000\n",
-    "scale = init_scale * z_shift\n",
-    "shift = np.array([height / 2, width / 2, 300])\n",
-    "model_shift = np.array([250 / init_scale, 0, 0])\n",
-    "\n",
-    "white = np.array([-255, -255, -255])\n",
-    "l = np.array([0, 0, 1])\n",
-    "\n",
-    "X_rotate = np.array([[1, 0, 0], [0, cos(a['x']), -sin(a['x'])], [0, sin(a['x']), cos(a['x'])]])\n",
-    "Y_rotate = np.array([[cos(a['y']), 0, sin(a['y'])], [0, 1, 0], [-sin(a['y']), 0, cos(a['y'])]])\n",
-    "Z_rotate = np.array([[cos(a['z']), -sin(a['z']), 0], [sin(a['z']), cos(a['z']), 0], [0, 0, 1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 55,
    "id": "21d833cc-b4cf-4d62-814b-c9ce760b302f",
    "metadata": {},
    "outputs": [],
@@ -60,17 +31,20 @@
     "        \n",
     "        while obj.tell() != length:\n",
     "            line = obj.readline().split()\n",
+    "\n",
+    "            if len(line) == 0:\n",
+    "                continue\n",
+    "            \n",
     "            if line[0] == 'v':\n",
-    "                vertices.append([float(line[1]), float(line[2]), float(line[3])])\n",
+    "                vertices.append(list(map(float, line[1:])))\n",
     "            elif line[0] == 'f':\n",
-    "                faces.append([int(line[1].split('/')[0]) - 1, int(line[2].split('/')[0]) - 1, int(line[3].split('/')[0]) - 1])\n",
-    "        \n",
-    "        return np.array(vertices), faces"
+    "                faces.append([int(vertex.split('/')[0]) - 1 for vertex in line[1:]])\n",
+    "        return np.array(vertices), np.array(faces)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 4,
    "id": "437808bf-7161-40f2-b803-e90942ca8552",
    "metadata": {},
    "outputs": [],
@@ -86,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 5,
    "id": "6d874b1a-4d54-4d1b-a72f-baf9519c6a80",
    "metadata": {},
    "outputs": [],
@@ -121,22 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "b7df8f51-1c24-4ea9-8bfc-f0359ec340d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_random_color():\n",
-    "    \n",
-    "    r = random.randint(0, 255)\n",
-    "    g = random.randint(0, 255)\n",
-    "    b = random.randint(0, 255)\n",
-    "    return (r, g, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 7,
    "id": "9d9ad029-3799-456a-8f49-821ad5c643fe",
    "metadata": {},
    "outputs": [],
@@ -163,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 8,
    "id": "201d9595-77e4-4dc0-9f30-fc7e998b378c",
    "metadata": {},
    "outputs": [],
@@ -174,7 +133,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 114,
+   "id": "d6c37fc4-b6bc-4a55-822c-d6392237c35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "degrees = {'x' : 45, 'y' : 0, 'z' : 90}\n",
+    "a = {k: radians(v) for k,v in degrees.items()}\n",
+    "\n",
+    "height = 1000\n",
+    "width = 1000\n",
+    "\n",
+    "init_scale = 5000\n",
+    "model_shift = np.array([250 / init_scale, 0, 0])\n",
+    "white = np.array([-255, -255, -255])\n",
+    "l = np.array([0, 0, 1])\n",
+    "\n",
+    "X_rotate = np.array([[1, 0, 0], [0, cos(a['x']), -sin(a['x'])], [0, sin(a['x']), cos(a['x'])]])\n",
+    "Y_rotate = np.array([[cos(a['y']), 0, sin(a['y'])], [0, 1, 0], [-sin(a['y']), 0, cos(a['y'])]])\n",
+    "Z_rotate = np.array([[cos(a['z']), -sin(a['z']), 0], [sin(a['z']), cos(a['z']), 0], [0, 0, 1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "id": "e81f1173-c254-4c62-a193-db4108b8ce59",
    "metadata": {},
    "outputs": [
@@ -182,31 +164,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[420.57362403 299.02583847 -82.18145832]\n",
-      " [424.42866445 304.5803389  -83.1656648 ]\n",
-      " [425.1018327  303.32722308 -80.57312421]\n",
+      "[[ 497.01291892  262.64740717 -152.68203173]\n",
+      " [ 502.14539691  269.84360362 -153.82754471]\n",
+      " [ 502.34160182  268.3756206  -149.72986092]\n",
       " ...\n",
-      " [665.21197369 346.03371309 -34.57780075]\n",
-      " [662.01171742 343.54980631 -33.42736997]\n",
-      " [658.08648631 338.6452685  -25.54044747]]\n"
+      " [ 778.19166181  323.30558534  -71.36828743]\n",
+      " [ 773.98476996  320.27855985  -69.72072862]\n",
+      " [ 766.09671062  314.33410997  -57.33575335]]\n"
      ]
     }
    ],
    "source": [
     "filename = 'model_1.obj'\n",
     "vertices, faces = process_obj(filename)\n",
-    "R = Y_rotate @ X_rotate @ Z_rotate\n",
-    "vertices = vertices @ R\n",
+    "R = X_rotate @ Y_rotate @ Z_rotate\n",
+    "vertices = (R @ vertices.T).T\n",
     "\n",
     "vertices += model_shift\n",
     "\n",
-    "min_z = vertices[:, 2].min()\n",
+    "z_shift = 2.0 * abs(vertices[:, 2].min())\n",
+    "scale = init_scale * z_shift\n",
     "\n",
-    "vertices[:, 0] = scale * vertices[:, 0] / (vertices[:, 2] + abs(min_z) + extra_z) + 500\n",
-    "vertices[:, 1] = scale * vertices[:, 1] / (vertices[:, 2] + abs(min_z) + extra_z) + 500\n",
-    "vertices[:, 2] *= 3000\n",
-    "\n",
-    "#vertices = shift_scale(vertices)\n",
+    "vertices[:, 0] = scale * vertices[:, 0] / (vertices[:, 2] + z_shift) + height / 2\n",
+    "vertices[:, 1] = scale * vertices[:, 1] / (vertices[:, 2] + z_shift) + width / 2\n",
+    "vertices[:, 2] *= init_scale\n",
     "\n",
     "matrix = np.full(shape=(height, width, 3), fill_value=[0, 0, 0], dtype = np.uint8)\n",
     "z_buffer = np.full(shape=(height, width), fill_value=np.inf)\n",
@@ -216,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 116,
    "id": "6a92bbde-6519-486c-8cc6-4c1018bb2220",
    "metadata": {},
    "outputs": [],
@@ -229,14 +210,6 @@
     "        \n",
     "Image.fromarray(matrix, 'RGB').save(\"draw_rabbit.jpg\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87e98fc2-c3b6-43e8-8287-857442e35881",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
