--- a/Testing/work2.ipynb
+++ b/Testing/work2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "483df79d-c8e7-409c-9dd3-51204ea80367",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "21d833cc-b4cf-4d62-814b-c9ce760b302f",
    "metadata": {},
    "outputs": [],
@@ -430,6 +430,8 @@
     "        \n",
     "        while obj.tell() != length:\n",
     "            line = obj.readline().split()\n",
+    "            if len(line) == 0:\n",
+    "                continue\n",
     "            if line[0] == 'v':\n",
     "                vertices.append([float(line[1]), float(line[2]), float(line[3])])\n",
     "            elif line[0] == 'f':\n",
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "0c473b76-f680-4980-b00b-2fbed45b1342",
    "metadata": {},
    "outputs": [],
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "8403c4bd-ed1e-4d22-acc6-5478073cd06e",
    "metadata": {},
    "outputs": [],
@@ -468,44 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "ef4a786e-cfeb-47e0-947e-e40d62b058aa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = 'model_1.obj'\n",
-    "vertices, faces = process_obj(filename)\n",
-    "degree = 180\n",
-    "radians = math.pi * degree / 180\n",
-    "scale = 7000\n",
-    "shift = 500\n",
-    "vertices[:,1] -= 500 / scale\n",
-    "\n",
-    "matrix = np.zeros((1000, 1000), dtype = np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "93a682ce-1157-43eb-97e8-be5f87811d7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_rotate_matrix = np.array([[math.cos(radians), 0, math.sin(radians)],\n",
-    "                            [0, 1, 0],\n",
-    "                            [-math.sin(radians), 0, math.cos(radians)]])\n",
-    "\n",
-    "vertices = vertices @ y_rotate_matrix\n",
-    "\n",
-    "#render_faces(matrix, 127)\n",
-    "#render_vertices(matrix, 255)\n",
-    "#matrix = np.rot90(matrix, 2)\n",
-    "#Image.fromarray(matrix).save(\"model.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "437808bf-7161-40f2-b803-e90942ca8552",
    "metadata": {},
    "outputs": [],
@@ -524,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "6d874b1a-4d54-4d1b-a72f-baf9519c6a80",
    "metadata": {},
    "outputs": [],
@@ -544,8 +509,8 @@
     "\n",
     "    xmin = 0 if xmin < 0 else xmin\n",
     "    ymin = 0 if ymin < 0 else ymin\n",
-    "    xmax = xmax if xmax < w else w\n",
-    "    ymax = ymax if ymax < h else h\n",
+    "    xmax = xmax if xmax < w - 1 else w - 1\n",
+    "    ymax = ymax if ymax < h - 1 else h - 1\n",
     "    \n",
     "    for i in range(xmin, xmax + 1):\n",
     "        for j in range(ymin, ymax + 1):\n",
@@ -559,22 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "759fe6c0-cc3f-4c57-9c29-24d80bd7b49d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix = np.full(shape=(H, W, 3), fill_value=[255, 0, 0], dtype = np.uint8)\n",
-    "\n",
-    "draw_triangle(matrix, [-150, -100], [150, 150], [0, 200], 200, 200)\n",
-    "\n",
-    "img = Image.fromarray(matrix, 'RGB')\n",
-    "img.save(\"draw_triangle.jpg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "b7df8f51-1c24-4ea9-8bfc-f0359ec340d3",
    "metadata": {},
    "outputs": [],
@@ -584,12 +534,12 @@
     "    r = random.randint(0, 255)\n",
     "    g = random.randint(0, 255)\n",
     "    b = random.randint(0, 255)\n",
-    "    return (r, g, b)"
+    "    return np.array([-r, -g, -b, -random.randint(0, 255)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 39,
    "id": "9d9ad029-3799-456a-8f49-821ad5c643fe",
    "metadata": {},
    "outputs": [],
@@ -611,8 +561,6 @@
     "    y = vz1 * vx2 - vx1 * vz2\n",
     "    z = vx1 * vy2 - vy1 * vx2\n",
     "\n",
-    "    wrki = math.sqrt(x**2+y**2+z**2)\n",
-    "\n",
     "    norm.append(x)\n",
     "    norm.append(y)\n",
     "    norm.append(z)\n",
@@ -622,22 +570,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 50,
+   "id": "e81f1173-c254-4c62-a193-db4108b8ce59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'model_1.obj'\n",
+    "vertices, faces = process_obj(filename)\n",
+    "scale = 7000\n",
+    "shift = 500\n",
+    "vertices[:,1] -= 500 / scale"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "6a92bbde-6519-486c-8cc6-4c1018bb2220",
    "metadata": {},
    "outputs": [],
    "source": [
     "l = np.array([0, 0, 1])\n",
-    "matrix = np.full(shape=(1000, 1000, 3), fill_value=[0, 0, 0], dtype = np.uint8)\n",
-    "z_buffer = np.full(shape=(1000, 1000), fill_value=np.inf)\n",
-    "for triangle in faces:\n",
-    "    norm = find_norm(vertices[triangle[0]], vertices[triangle[1]], vertices[triangle[2]])\n",
-    "    angle = np.dot(norm, l)/np.linalg.norm(norm)\n",
-    "    if (angle < 0):\n",
-    "        draw_triangle(matrix, vertices[triangle[0]], vertices[triangle[1]], vertices[triangle[2]], 1000, 1000, [-255*angle, -255*angle, -255*angle], z_buffer)\n",
-    "matrix = np.rot90(matrix, 1)\n",
-    "Image.fromarray(matrix, 'RGB').save(\"draw_rabbit.jpg\")"
+    "images = []\n",
+    "radians = math.pi * 90 / 180\n",
+    "y_rotate_matrix = np.array([[math.cos(radians), 0, math.sin(radians)],\n",
+    "                        [0, 1, 0],\n",
+    "                        [-math.sin(radians), 0, math.cos(radians)]])\n",
+    "x_rotate_matrix = np.array([[1, 0, 0],\n",
+    "                        [0, math.cos(radians), -math.sin(radians)],\n",
+    "                        [0, math.sin(radians), math.cos(radians)]])\n",
+    "z_rotate_matrix = np.array([[math.cos(radians), -math.sin(radians), 0],\n",
+    "                        [math.sin(radians), math.cos(radians), 0],\n",
+    "                        [0, 0, 1]])\n",
+    "\n",
+    "r = z_rotate_matrix\n",
+    "\n",
+    "models = np.array([vertices.copy(),vertices.copy() @ r,vertices.copy() @ r @ r,vertices.copy() @ r @ r @ r])\n",
+    "\n",
+    "radians = math.pi * 45 / 180\n",
+    "\n",
+    "z_rotate_matrix = np.array([[math.cos(radians), -math.sin(radians), 0],\n",
+    "                        [math.sin(radians), math.cos(radians), 0],\n",
+    "                        [0, 0, 1]])\n",
+    "\n",
+    "r = z_rotate_matrix\n",
+    "\n",
+    "for degree in range(0, 72):\n",
+    "    matrix = np.full(shape=(1000, 1000, 4), fill_value=[255, 255, 255, 0], dtype = np.uint8)\n",
+    "    z_buffer = np.full(shape=(1000, 1000), fill_value=np.inf)\n",
+    "\n",
+    "    for i in range(4):\n",
+    "        for triangle in faces:\n",
+    "            norm = find_norm(vertice[triangle[0]], vertices[triangle[1]], vertices[triangle[2]])\n",
+    "            angle = np.dot(norm, l)/np.linalg.norm(norm)\n",
+    "            if (angle < 0):\n",
+    "                draw_triangle(matrix, vertices[triangle[0]], vertices[triangle[1]], vertices[triangle[2]], 1000, 1000, get_random_color()*angle, z_buffer)\n",
+    "\n",
+    "    images.append(Image.fromarray(matrix, 'RGBA'))\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "a06eb1c8-1363-415b-be86-b28629ad1152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "images[0].save(\n",
+    "    'rabbit.gif',\n",
+    "    save_all=True,\n",
+    "    append_images=images[1:],\n",
+    "    optimize=False,\n",
+    "    duration=100,\n",
+    "    disposal=2,\n",
+    "    loop=0\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0950a2-7f0c-4fca-96ff-2f5f3fcb43bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
