--- a/5/work5.ipynb
+++ b/5/work5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "483df79d-c8e7-409c-9dd3-51204ea80367",
    "metadata": {},
    "outputs": [],
@@ -15,14 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "d6c37fc4-b6bc-4a55-822c-d6392237c35c",
    "metadata": {},
    "outputs": [],
    "source": [
     "init_scale = 6000\n",
     "model_shift = np.array([0, -300, 0])\n",
-    "light = np.array([0, 0.1, 0.1])\n",
+    "light = np.array([0, 1, 1])\n",
     "camera = np.array([0, 0, 1])\n",
     "height = 1000\n",
     "width = 1000\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "e81f1173-c254-4c62-a193-db4108b8ce59",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
+   "id": "deaa9600-ebe1-450e-b444-f155bdfb5fa8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'afro_model.obj'\n",
+    "texture_filename = 'afro.bmp'\n",
+    "\n",
+    "afroModel = ObjParser.processObj(filename)\n",
+    "afroTexture = ObjParser.processTexture(texture_filename)\n",
+    "afroModel.addTexture(afroTexture)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "88c6180c-5b3e-4141-a542-40cc3b724a17",
    "metadata": {},
    "outputs": [],
@@ -56,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8a88f466-3dec-43d9-b7f0-3858809bc05d",
    "metadata": {},
    "outputs": [],
@@ -69,13 +84,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "id": "dab3e815-86ce-4d80-87ef-f740f7205a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene.addModel(afroModel)\n",
+    "scene.scaleModel(300, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "125c6b69-c29a-4129-ba61-f4717c58b0df",
    "metadata": {},
    "outputs": [],
    "source": [
     "scene.renderScene(\"test_full_pipeline.png\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be7c8af-bfc8-41ea-bcd3-d3860d4f8d67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
