--- a/5/work5.ipynb
+++ b/5/work5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "483df79d-c8e7-409c-9dd3-51204ea80367",
    "metadata": {},
    "outputs": [],
@@ -15,87 +15,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "d6c37fc4-b6bc-4a55-822c-d6392237c35c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_scale = 6000\n",
-    "model_shift = np.array([0, -300, 0])\n",
-    "light = np.array([0, 1, 1])\n",
-    "camera = np.array([0, 0, 1])\n",
-    "height = 1000\n",
-    "width = 1000\n",
-    "degrees = {'x' : 0, 'y' : -130, 'z' : 0}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "e81f1173-c254-4c62-a193-db4108b8ce59",
+   "execution_count": 10,
+   "id": "deaa9600-ebe1-450e-b444-f155bdfb5fa8",
    "metadata": {},
    "outputs": [],
    "source": [
     "filename = 'bunny_model.obj'\n",
     "texture_filename = 'bunny.jpg'\n",
     "\n",
-    "catModel = ObjParser.processObj(filename)\n",
-    "catTexture = ObjParser.processTexture(texture_filename)\n",
-    "catModel.addTexture(catTexture)"
+    "bunnyModel = ObjParser.processObj(filename)\n",
+    "bunnyTexture = ObjParser.processTexture(texture_filename)\n",
+    "bunnyModel.addTexture(bunnyTexture)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b533a309-6463-40aa-b393-8d78e97583de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'frog_model.obj'\n",
+    "texture_filename = 'frog.jpg'\n",
+    "\n",
+    "frogModel = ObjParser.processObj(filename)\n",
+    "frogTexture = ObjParser.processTexture(texture_filename)\n",
+    "frogModel.addTexture(frogTexture)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d6c37fc4-b6bc-4a55-822c-d6392237c35c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "light = np.array([0, 1, 1])\n",
+    "camera = np.array([0, 0, 1])\n",
+    "height = 1080\n",
+    "width = 1920\n",
+    "degrees = {'x' : 0, 'y' : 130, 'z' : 0}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "88c6180c-5b3e-4141-a542-40cc3b724a17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scene = Scene(height, width, light, camera)\n",
+    "scene.setShading('phong')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dab3e815-86ce-4d80-87ef-f740f7205a6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.01389390e+03 4.90466624e+02 2.37849729e-01]\n",
+      " [1.01145951e+03 4.88873838e+02 2.37774545e-01]\n",
+      " [1.01316393e+03 4.88666265e+02 2.37124768e-01]\n",
+      " ...\n",
+      " [1.01913593e+03 3.75735375e+02 2.21152302e-01]\n",
+      " [1.02075475e+03 3.76926124e+02 2.20997998e-01]\n",
+      " [1.02683091e+03 3.76015488e+02 2.19084715e-01]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_scale = 500\n",
+    "model_shift = np.array([0, -37, 0])\n",
+    "rotateAxis = np.array([0,1,0], dtype='float64')\n",
+    "rotateDegree = 120\n",
+    "\n",
+    "index = 0;\n",
+    "scene.addModel(init_scale, bunnyModel)\n",
+    "scene.rotateModelQuaternion(rotateDegree, rotateAxis, index)\n",
+    "scene.scaleModel(init_scale, index)\n",
+    "scene.shiftModel(model_shift, index)\n",
+    "scene.perspectiveTransformModel(0.15, init_scale, index)\n",
+    "print(scene.objModels[index].v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1ae5a0e7-ae97-4e28-a3d9-b52737f34008",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[987.49412211 548.0598999   13.15462987]\n",
+      " [987.88756164 548.72218468  13.12457879]\n",
+      " [986.54051846 548.75266751  13.07886994]\n",
+      " ...\n",
+      " [984.61387783 537.9833361   15.24795483]\n",
+      " [984.77684589 538.01771299  15.20970471]\n",
+      " [984.9685801  538.06204815  15.17065555]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_scale = 250\n",
+    "model_shift = np.array([200, -80, 0])\n",
+    "rotateAxis1 = np.array([1,0,0], dtype='float64')\n",
+    "rotateAxis = np.array([0,1,0], dtype='float64')\n",
+    "rotateDegree = 150\n",
+    "rotateDegree1 = -90\n",
+    "\n",
+    "index = 1\n",
+    "scene.addModel(init_scale, frogModel)\n",
+    "scene.rotateModelQuaternion(rotateDegree1, rotateAxis1, index)\n",
+    "scene.rotateModelQuaternion(rotateDegree, rotateAxis, index)\n",
+    "scene.scaleModel(init_scale , index)\n",
+    "scene.shiftModel(model_shift, index)\n",
+    "scene.perspectiveTransformModel(10.75, init_scale, index)\n",
+    "print(scene.objModels[index].v)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "deaa9600-ebe1-450e-b444-f155bdfb5fa8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filename = 'afro_model.obj'\n",
-    "texture_filename = 'afro.bmp'\n",
-    "\n",
-    "afroModel = ObjParser.processObj(filename)\n",
-    "afroTexture = ObjParser.processTexture(texture_filename)\n",
-    "afroModel.addTexture(afroTexture)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "88c6180c-5b3e-4141-a542-40cc3b724a17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scene = Scene(height, width, light, camera)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a88f466-3dec-43d9-b7f0-3858809bc05d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scene.addModel(catModel)\n",
-    "scene.rotateModel(degrees, 0)\n",
-    "scene.scaleModel(init_scale, 0)\n",
-    "scene.shiftModel(model_shift, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "dab3e815-86ce-4d80-87ef-f740f7205a6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scene.addModel(afroModel)\n",
-    "scene.scaleModel(300, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "id": "125c6b69-c29a-4129-ba61-f4717c58b0df",
    "metadata": {},
    "outputs": [],
@@ -106,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4be7c8af-bfc8-41ea-bcd3-d3860d4f8d67",
+   "id": "7eeb122d-52ff-42f0-873c-a3097caff285",
    "metadata": {},
    "outputs": [],
    "source": []
